--- a/vue-calendar/src/assets/styles/variables.scss
+++ b/vue-calendar/src/assets/styles/variables.scss
@@ -2,7 +2,8 @@ $color-purple: rgb(68 71 145);
 $color-purple-dark: rgb(50 53 112);
 $color-white: rgb(255 255 255);
 $color-black: rgb(0 0 0);
+$color-black-light: rgb(173 170 170);
 $content-width: 1600px;
 $font-size-base: 1.8rem;
 $font-size-small: 1.5rem;
-$font-size-large: 2rem;
+$font-size-large: 2.5rem;
