--- a/vue-calendar/src/assets/styles/variables.scss
+++ b/vue-calendar/src/assets/styles/variables.scss
@@ -3,6 +3,7 @@ $color-purple: rgb(68 71 145);
 $color-purple-dark: rgb(50 53 112);
 $color-black-light: rgb(173 170 170);
 $color-white: rgb(255 255 255);
+$color-white-dark: rgb(245 245 245);
 $color-black: rgb(0 0 0);
 
 // fonts sizes
