--- a/vue-calendar/src/assets/styles/spinner.scss
+++ b/vue-calendar/src/assets/styles/spinner.scss
@@ -12,7 +12,7 @@
     height: 30px;
     transform: translate(-50% -50%);
     border-radius: 50%;
-    border-top: 2px solid #07d;
+    border-top: 2px solid $color-purple-dark;
     border-right: 2px solid transparent;
     animation: spinner 1s linear infinite;
     visibility: visible;
