--- a/vue-calendar/src/assets/styles/variables.scss
+++ b/vue-calendar/src/assets/styles/variables.scss
@@ -1,10 +1,13 @@
 // colors
+$color-purple-light: rgb(91 95 199);
 $color-purple: rgb(68 71 145);
 $color-purple-dark: rgb(50 53 112);
 $color-black-light: rgb(173 170 170);
 $color-white: rgb(255 255 255);
 $color-white-dark: rgb(245 245 245);
+$color-grey: rgb(243 242 241);
 $color-black: rgb(0 0 0);
+$color-black-font: rgb(66 66 66);
 $color-red: rgb(211 47 47);
 
 // fonts sizes
