feat: implement main page header

--- a/vue-calendar/src/assets/styles/variables.scss
+++ b/vue-calendar/src/assets/styles/variables.scss
@@ -9,6 +9,8 @@ $color-grey: rgb(243 242 241);
 $color-black: rgb(0 0 0);
 $color-black-font: rgb(66 66 66);
 $color-red: rgb(211 47 47);
+$neutral-light: rgb(237 235 233);
+$neutral-primary: rgb(236 233 229);
 
 // fonts sizes
 $font-size-base: 1.8rem;
@@ -19,3 +21,4 @@ $font-size-large: 2rem;
 $content-width: 1600px;
 $header-height: 50px;
 $footer-height: 50px;
+$main-page-header: 45px;
