refactor: rename emit eventes by kebab-case style, add variables for bg images

--- a/vue-calendar/src/assets/styles/variables.scss
+++ b/vue-calendar/src/assets/styles/variables.scss
@@ -27,6 +27,10 @@ $main-page-header: 45px;
 $github-logo-url: url("https://res.cloudinary.com/rss-collection/image/upload/v1652345776/github_ke79xc.svg");
 $status-image-url: url("https://res.cloudinary.com/rss-collection/image/upload/v1660310631/calendar/5378817_camera_games_image_photo_screenshot_icon_pmh56g.svg");
 $arrow-down-image-url: url("https://res.cloudinary.com/rss-collection/image/upload/v1660429714/calendar/2931160_down_direction_download_pointer_arrow_icon_lqd0xe.svg");
+$arrow-up-url: url("https://res.cloudinary.com/rss-collection/image/upload/v1660746623/calendar/3671668_arrow_thin_up_icon_oo8nwf.svg");
+$arrow-down-url: url("https://res.cloudinary.com/rss-collection/image/upload/v1660746652/calendar/3671655_arrow_down_icon_pkjhjh.svg");
+$calendar-image-url: url("https://res.cloudinary.com/rss-collection/image/upload/v1660745070/calendar/290104_calendar_clock_date_event_schedule_icon_qq0azb.svg");
+$calendar-week-image-url: url("https://res.cloudinary.com/rss-collection/image/upload/v1660752582/calendar/9039893_calendar4_week_icon_ev3pnu.svg");
 
 // shadows
 $box-shadow-basic: 0 0 2px rgb(0 0 0 / 12%), 0 8px 16px rgb(0 0 0 / 14%);
