feat: implement calendar cell rendering

--- a/vue-calendar/src/assets/styles/variables.scss
+++ b/vue-calendar/src/assets/styles/variables.scss
@@ -6,6 +6,7 @@ $color-white: rgb(255 255 255);
 $color-white-dark: rgb(245 245 245);
 $color-black: rgb(0 0 0);
 $color-red: rgb(211 47 47);
+$color-blue: rgb(0 120 215);
 
 // fonts sizes
 $font-size-base: 1.8rem;
