feat: add blue color css variable

--- a/vue-calendar/src/assets/styles/helpers/variables.scss
+++ b/vue-calendar/src/assets/styles/helpers/variables.scss
@@ -11,6 +11,7 @@ $color-black-font: rgb(66 66 66);
 $color-red: rgb(211 47 47);
 $color-beige-light: rgb(237 235 233);
 $color-beige: rgb(236 233 229);
+$color-blue: rgb(0 120 215);
 
 // fonts sizes
 $font-size-base: 1.8rem;
