--- a/vue-calendar/src/assets/styles/helpers/variables.scss
+++ b/vue-calendar/src/assets/styles/helpers/variables.scss
@@ -11,6 +11,10 @@ $color-black-font: rgb(66 66 66);
 $color-red: rgb(211 47 47);
 $color-beige-light: rgb(237 235 233);
 $color-beige: rgb(236 233 229);
+$color-blue: rgb(0 120 215);
+$color-blue-light: rgb(220 236 249);
+$color-blue-dark: rgb(40 100 145);
+$color-blue-lighter: rgb(186 218 243);
 
 // fonts sizes
 $font-size-base: 1.8rem;
@@ -22,6 +26,7 @@ $content-width: 1600px;
 $header-height: 50px;
 $footer-height: 50px;
 $main-page-header: 45px;
+$calendar-header-height: 50px;
 
 // urls constants
 $github-logo-url: url("https://res.cloudinary.com/rss-collection/image/upload/v1652345776/github_ke79xc.svg");
@@ -31,6 +36,7 @@ $arrow-up-url: url("https://res.cloudinary.com/rss-collection/image/upload/v1660
 $arrow-down-url: url("https://res.cloudinary.com/rss-collection/image/upload/v1660746652/calendar/3671655_arrow_down_icon_pkjhjh.svg");
 $calendar-image-url: url("https://res.cloudinary.com/rss-collection/image/upload/v1660745070/calendar/290104_calendar_clock_date_event_schedule_icon_qq0azb.svg");
 $calendar-week-image-url: url("https://res.cloudinary.com/rss-collection/image/upload/v1660752582/calendar/9039893_calendar4_week_icon_ev3pnu.svg");
+$calendar-dots-image-url: url("https://res.cloudinary.com/rss-collection/image/upload/v1661774864/calendar/9023499_dots_three_fill_icon_nmjlfs.svg");
 
 // shadows
 $box-shadow-basic: 0 0 2px rgb(0 0 0 / 12%), 0 8px 16px rgb(0 0 0 / 14%);
