feat: implement event creation

--- a/vue-calendar/src/assets/styles/helpers/mixins.scss
+++ b/vue-calendar/src/assets/styles/helpers/mixins.scss
@@ -3,3 +3,8 @@
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
+@mixin icon($content: "", $background) {
+  content: $content;
+  background: no-repeat center/100% $background;
+}
